--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp
+                <a href="https://twitter.com/fadikhateeb">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/jonbarron/">Github</a>
               </p>
             </td>
