--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <title>Fadi Khatib</title>
   
-  <meta name="author" content="Jon Barron">
+  <meta name="author" content="Fadi Khatib">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -51,7 +51,7 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 					
-        
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/clean_promo.jpg" alt="clean-usnob" width="160" height="160">
