--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta name="author" content="Fadi Khatib">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta name="google-site-verification" content="0DdB5OUMjPIECnNDQsCR7aKGHWBuYuj4jEB11r4Q_ns" />
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
 </head>
