--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <!--                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp-->
 <!--                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
                 <a href="https://twitter.com/FadiKhatib1311">Twitter</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/fadi-khateeb/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://github.com/FadiKhateeb">Github</a>
               </p>
             </td>
