--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/GrelPose.jpg" alt="clean-usnob" width="160" height="160">
+              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
                 <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
               </a>
               <br>
-              <strong>Fadi Khatib</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
               <em>Preprint</em>, 2022
               <p>We use computer vision techniques to identify and remove diffraction spikes and reflection halos in the USNO-B Catalog.</p>
