updating my first publication 3

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
               <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
               <em>Preprint</em>, 2022
-              <p>We use computer vision techniques to identify and remove diffraction spikes and reflection halos in the USNO-B Catalog.</p>
-              <p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>
+              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
+data.</p>
             </td>
           </tr>
 
