updating my first publication 4

--- a/index.html
+++ b/index.html
@@ -53,14 +53,25 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
             </td>
+            <script type="text/javascript">
+					var bibtex_grelpose = "@article{haim2022reconstructing,\n  title={Reconstructing training data from trained neural networks},\n  author={Haim, Niv and Vardi, Gal and Yehudai, Gilad and Shamir, Ohad and Irani, Michal},\n  journal={arXiv preprint arXiv:2206.07758},\n  year={2022}\n}"
+              </script>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
+              <a href="https://fadikhateeb.github.io/GRelPose/">
                 <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
               </a>
               <br>
               <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
               <em>Preprint</em>, 2022
+              <br>
+              <div class="btn-group">
+				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
+				<a href="https://arxiv.org/abs/1905.11911">ArXiv</a> /
+				<a href="https://github.com/matanatz/ControllingNeuralLevelsets">Code</a> /
+				<a href="https://github.com/matanatz/ControllingNeuralLevelsets/blob/master/Controlling_Neural_Level_Sets_Poster.pdf">Poster</a>
+              </div>
+              <br>
               <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
               coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
 data.</p>
