--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="0DdB5OUMjPIECnNDQsCR7aKGHWBuYuj4jEB11r4Q_ns" />
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+
+ <script>
+	const copyToClipboard = str => {
+	  const el = document.createElement('textarea');
+	  el.value = str;
+	  document.body.appendChild(el);
+	  el.select();
+	  document.execCommand('copy');
+	  document.body.removeChild(el);
+	  alert("The following bibtextex has been copied to clipboard:\n\n" + el.value);
+	};
+  </script>
+
 </head>
 
 <body>
@@ -54,7 +67,7 @@
               <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
             </td>
             <script type="text/javascript">
-					var bibtex_grelpose = "@article{haim2022reconstructing,\n  title={Reconstructing training data from trained neural networks},\n  author={Haim, Niv and Vardi, Gal and Yehudai, Gilad and Shamir, Ohad and Irani, Michal},\n  journal={arXiv preprint arXiv:2206.07758},\n  year={2022}\n}"
+					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
               </script>
             <td width="75%" valign="middle">
               <a href="https://fadikhateeb.github.io/GRelPose/">
