updating my first publication 6

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Fadi Khatib</title>
+  <title>Fadi Khatib // Under Reconstruction</title>
   
   <meta name="author" content="Fadi Khatib">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,9 +80,8 @@
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/1905.11911">ArXiv</a> /
-				<a href="https://github.com/matanatz/ControllingNeuralLevelsets">Code</a> /
-				<a href="https://github.com/matanatz/ControllingNeuralLevelsets/blob/master/Controlling_Neural_Level_Sets_Poster.pdf">Poster</a>
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
+				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
               </div>
               <br>
               <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
