--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Fadi Khatib // Under Reconstruction</title>
+  <title>Fadi Khatib</title>
   
   <meta name="author" content="Fadi Khatib">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Fadi Khatib</name>
+                <name>Fadi Khatib  // Under Reconstruction</name>
               </p>
               <p>I finished my B.Sc in Computer Science, at age 18, via Etgar program at Haifa University for outstanding high school students. Currently, I am a M.Sc student at Weizmann Institute of Science
               </p>
