--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
               <p style="text-align:center">
                 <name>Fadi Khatib  // Under Reconstruction</name>
               </p>
-              <p>I finished my B.Sc in Computer Science, at age 18, via Etgar program at Haifa University for outstanding high school students. Currently, I am a M.Sc student at Weizmann Institute of Science
+
+              <p>
+                I am a master student  in the Department of Computer Science and Applied Mathematics at the <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.
+              </p>
+              <p>I finished my B.Sc in Computer Science, at age 18, via Etgar program at Haifa University for outstanding high school students.
               </p>
 
               <p style="text-align:center">
