Updating the bio

--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
               </p>
 
               <p>
-                I am a master student  in the Department of Computer Science and Applied Mathematics at the <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.
+                I am a master student  in the Department of Computer Science and Applied Mathematics at the <a href="https://www.weizmann.ac.il/pages/">Weizmann Institute of Science</a> under the supervision of <a href="https://www.weizmann.ac.il/math/ronen/home"> Prof. Ronen Basri.</a>
               </p>
-              <p>I finished my B.Sc in Computer Science, at age 18, via Etgar program at Haifa University for outstanding high school students.
+              <p>
+                  I received my B.Sc in Computer Science at the age of 18 from the University of Haifa through the <a href="https://cs.hevra.haifa.ac.il/index.php/information-for-registrants-he/challenge-program">Challenge program</a>, which is designed for exceptional high school students.
               </p>
+                <p>
+                    My research interests lie at the intersection of computer vision, computer graphics, and machine learning. Through my research, I want to make it easier for computers and machines to understand and capture the dynamic 3D world we live in from images and videos.
+                </p>
+
+
 
               <p style="text-align:center">
                 <a href="mailto:fadi.e.khateeb@gmail.com">Email</a> &nbsp/&nbsp
@@ -87,7 +93,6 @@
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
 				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
               </div>
-              <br>
               <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
               coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
 data.</p>
@@ -96,6 +101,78 @@ data.</p>
 
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <script type="text/javascript">
+					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
+              </script>
+            <td width="75%" valign="middle">
+              <a href="https://fadikhateeb.github.io/GRelPose/">
+                <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
+              </a>
+              <br>
+              <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <br>
+              <em>Preprint</em>, 2022
+              <br>
+              <div class="btn-group">
+				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
+				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
+              </div>
+              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
+data.</p>
+            </td>
+          </tr>
+
+        </tbody></table>
+
+<!--        teaching-->
+         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Teaching</heading>
+
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <script type="text/javascript">
+					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
+              </script>
+            <td width="75%" valign="middle">
+              <a href="https://fadikhateeb.github.io/GRelPose/">
+                <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
+              </a>
+              <br>
+              <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <br>
+              <em>Preprint</em>, 2022
+              <br>
+              <div class="btn-group">
+				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
+				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
+              </div>
+              <p>We propose a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
+data.</p>
+            </td>
+          </tr>
+
+        </tbody></table>
 <!--				-->
 <!--        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>-->
 <!--          <tr>-->
