--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             </td>
           </tr>
         </tbody></table>
+
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
@@ -101,6 +103,14 @@ data.</p>
 
         </tbody></table>
 
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Projects</heading>
+
+            </td>
+          </tr>
+        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
@@ -133,15 +143,6 @@ data.</p>
 
         </tbody></table>
 
-<!--        teaching-->
-         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Teaching</heading>
-
-            </td>
-          </tr>
-        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
@@ -166,8 +167,34 @@ data.</p>
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
 				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
               </div>
-              <p>We propose a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
               coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
+data.</p>
+            </td>
+          </tr>
+
+        </tbody></table>
+
+
+<!--        teaching-->
+         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Teaching</heading>
+
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/WIS_logo.jpg" alt="clean-usnob" width="160" height="160">
+            </td>
+            <td width="75%" valign="center">
+              Advanced Topics in Computer Vision and Deep Learning, Spring 2021 [<a href="https://weizmannvision.github.io/adlv2021/">website</a>
+            </td>
 data.</p>
             </td>
           </tr>
