--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/WIS_logo.JPG" alt="clean-usnob" width="160" height="160">
+              <img src="images/WIS_logo.jpg" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
               Advanced Topics in Computer Vision and Deep Learning, Spring 2021 [<a href="https://weizmannvision.github.io/adlv2021/">website</a>
