--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@ data.</p>
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
 				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
               </div>
-              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
-              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
-data.</p>
+              <p>
+              We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training data.
+              </p>
             </td>
           </tr>
 
@@ -193,9 +194,9 @@ data.</p>
               <img src="images/WIS_logo.jpg" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
-              Advanced Topics in Computer Vision and Deep Learning, Spring 2021 [<a href="https://weizmannvision.github.io/adlv2021/">website</a>
+              <a href="https://erez.weizmann.ac.il/pls/htmldb/f?p=186/30/16031729465298//NO//pid_/_pprev/14534_/_13968">Multiple View Geometry for Computer Vision Applications</a> , Spring 2023 [<a href="https://www.youtube.com/playlist?list=PLEB45naDUsF2vpvdxZ72Jjl8ZEKISv4Nh">Youtube</a>
             </td>
-data.</p>
+
             </td>
           </tr>
 
