--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/WIS_logo.jpg" alt="clean-usnob" width="160" height="160">
+              <img src="images/WIS_logo.JPG" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
-              <a href="https://erez.weizmann.ac.il/pls/htmldb/f?p=186/30/16031729465298//NO//pid_/_pprev/14534_/_13968">Multiple View Geometry for Computer Vision Applications</a> , Spring 2023 [<a href="https://www.youtube.com/playlist?list=PLEB45naDUsF2vpvdxZ72Jjl8ZEKISv4Nh">Youtube</a>
+              <a href="https://erez.weizmann.ac.il/pls/htmldb/f?p=186/30/16031729465298//NO//pid_/_pprev/14534_/_13968">Multiple View Geometry for Computer Vision Applications</a> , Spring 2023 [<a href="https://www.youtube.com/playlist?list=PLEB45naDUsF2vpvdxZ72Jjl8ZEKISv4Nh">Youtube</a>]
             </td>
 
             </td>
