Adding Hagit's project

--- a/index.html
+++ b/index.html
@@ -116,28 +116,19 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/HandsRecogniton.png" alt="clean-usnob" width="160" height="160">
             </td>
-            <script type="text/javascript">
-					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
-              </script>
             <td width="75%" valign="middle">
               <a href="https://fadikhateeb.github.io/GRelPose/">
-                <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
+                <papertitle><a href="data/HandsRecogniton_report.pdf">Recognition from Hands Movements Project</a></papertitle>
               </a>
               <br>
-              <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <strong>Fadi Khatib*</strong>, Julian Mour*, <a href="https://chb.hevra.haifa.ac.il/">Hagit Hel-Or</a>
               <br>
-              <em>Preprint</em>, 2022
-              <br>
-              <div class="btn-group">
-				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
-				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
-              </div>
-              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
-              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
-data.</p>
+              <p>
+              Developed a method for hands gestures detection, to be used for emotion recognition problem.
+                By utilizing pre-trained models from Google Mediapipe for pose and hand pose estimation.
+              </p>
             </td>
           </tr>
 
