--- a/index.html
+++ b/index.html
@@ -192,6 +192,23 @@ data.</p>
           </tr>
 
         </tbody></table>
+
+        <!--        Awards-->
+         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Awards</heading>
+
+            </td>
+          </tr>
+         <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <li> fadi </li>
+
+            </td>
+          </tr>
+        </tbody></table>
+
 <!--				-->
 <!--        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>-->
 <!--          <tr>-->
