--- a/index.html
+++ b/index.html
@@ -198,13 +198,10 @@ data.</p>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Awards</heading>
-
-            </td>
-          </tr>
-         <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
+              <ul>
               <li> fadi </li>
-
+              <li> fadi </li>
+              </ul>
             </td>
           </tr>
         </tbody></table>
