--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ data.</p>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Awards</heading>
               <ul>
-              <li> fadi </li>
-              <li> fadi </li>
+              <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
+              <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
               </ul>
             </td>
           </tr>
