Adding my awards

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@ data.</p>
               <ul>
               <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
               <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
+              <li> The Israeli Council for Higher Education Scholarship for outstanding master students, 2021-2023.</li>
+              <li> Young Weizmann Scholars Diversity and Excellence Program Scholarship, 2021.</li>
+              <li> "Akavia" Scholarship for outstanding students at the department of CS, University of Haifa, 2021.</li>
+              <li> Dean scholarship (summa cum laude), University of Haifa, 2020.</li>
+              <li> "Akavia" Scholarship for outstanding students at the department of CS, University of Haifa, 2020.</li>
+              <li> The 100 Most Outstanding Students Award at the National Mathematics Olympics, 2018.</li>
+              <li> First place at the "Moofet" National Mathematics Olympics, 2015.</li>
               </ul>
             </td>
           </tr>
