--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ data.</p>
               <img src="images/HandsRecogniton.png" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://fadikhateeb.github.io/GRelPose/">
-                <papertitle><a href="data/HandsRecogniton_report.pdf">Recognition from Hands Movements Project</a></papertitle>
+              <a href="data/HandsRecogniton_report.pdf">
+                <papertitle>Recognition from Hands Movements Project</papertitle>
               </a>
               <br>
               <strong>Fadi Khatib*</strong>, Julian Mour*, <a href="https://chb.hevra.haifa.ac.il/">Hagit Hel-Or</a>
