--- a/index.html
+++ b/index.html
@@ -167,16 +167,17 @@ data.</p>
 
         </tbody></table>
 
-
+        <hr class="soft">
 <!--        teaching-->
-         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Teaching</heading>
 
             </td>
           </tr>
-        </tbody></table>
+        </tbody>
+         </table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
@@ -192,7 +193,7 @@ data.</p>
           </tr>
 
         </tbody></table>
-
+        <hr class="soft">
         <!--        Awards-->
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
