--- a/index.html
+++ b/index.html
@@ -194,6 +194,26 @@ data.</p>
 
         </tbody></table>
         <hr class="soft">
+        <!--        Volunteer Experience-->
+         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Volunteer Experience</heading>
+              <ul>
+              <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
+              <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.
+                <ul>
+                  <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
+                  <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
+                </ul>
+              </li>
+
+
+              </ul>
+            </td>
+          </tr>
+        </tbody></table>
+
         <!--        Awards-->
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
