--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ data.</p>
               <heading>Volunteer Experience</heading>
               <ul>
               <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
-              <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.
+                  <li> <b> Founder of the "Weizmann Arab Students and Researchers Association" </b>
                 <ul>
-                  <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
-                  <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
+                  <li> Organizing Outreach programs, panels, mentoring programs, social activities and many other.</li>
+                  <li> Supported by the diversity and inclusion office at the Weizmann Institute.</li>
                 </ul>
               </li>
 
@@ -214,6 +214,7 @@ data.</p>
           </tr>
         </tbody></table>
 
+        <hr class="soft">
         <!--        Awards-->
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
