--- a/index.html
+++ b/index.html
@@ -200,14 +200,13 @@ data.</p>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Volunteer Experience</heading>
               <ul>
-              <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
                   <li> <b> Founder of the "Weizmann Arab Students and Researchers Association" </b>
                 <ul>
-                  <li> Organizing Outreach programs, panels, mentoring programs, social activities and many other.</li>
+                  <li> Organizing outreach programs, panels, mentoring programs, social activities and many others.</li>
                   <li> Supported by the diversity and inclusion office at the Weizmann Institute.</li>
                 </ul>
-              </li>
-
+                </li>
+                <li> Volunteering in various programs that support and encourage students from underrepresented groups in academia.</li>
 
               </ul>
             </td>
