--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Fadi Khatib  // Under Reconstruction</name>
+                <name>Fadi Khatib</name>
               </p>
 
               <p>
@@ -48,7 +48,7 @@
 
               <p style="text-align:center">
                 <a href="mailto:fadi.e.khateeb@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/FadiKhateeb-CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/FadiKhatib_CV.pdf">CV</a> &nbsp/&nbsp
 <!--                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp-->
 <!--                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
                 <a href="https://twitter.com/FadiKhatib1311">Twitter</a> &nbsp/&nbsp
@@ -120,7 +120,7 @@ data.</p>
             </td>
             <td width="75%" valign="middle">
               <a href="data/HandsRecogniton_report.pdf">
-                <papertitle>Recognition from Hands Movements Project</papertitle>
+                <papertitle>Emotions Recognition from Hands Movements</papertitle>
               </a>
               <br>
               <strong>Fadi Khatib*</strong>, Julian Mour*, <a href="https://chb.hevra.haifa.ac.il/">Hagit Hel-Or</a>
@@ -139,28 +139,18 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/HandsRecogniton.png" alt="clean-usnob" width="160" height="160">
             </td>
-            <script type="text/javascript">
-					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
-              </script>
             <td width="75%" valign="middle">
-              <a href="https://fadikhateeb.github.io/GRelPose/">
-                <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
+              <a href="data/HandsRecogniton_report.pdf">
+                <papertitle>Mapping Human Viral Proteins</papertitle>
               </a>
               <br>
-              <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <strong>Fadi Khatib</strong>, <a href="https://www.cs.haifa.ac.il/~trachel/contact.html">Rachel Kolodny</a>
               <br>
-              <em>Preprint</em>, 2022
-              <br>
-              <div class="btn-group">
-				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
-				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
-				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
-              </div>
               <p>
-              We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
-              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training data.
+              Worked on mapping human viral proteins, where the goal is to reveal the relation
+                between different viruses by using computational biology methods and applying them to biological databases.
               </p>
             </td>
           </tr>
