--- a/index.html
+++ b/index.html
@@ -139,12 +139,11 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/HandsRecogniton.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/Rachel_covid.jpg" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="data/HandsRecogniton_report.pdf">
                 <papertitle>Mapping Human Viral Proteins</papertitle>
-              </a>
+
               <br>
               <strong>Fadi Khatib</strong>, <a href="https://www.cs.haifa.ac.il/~trachel/contact.html">Rachel Kolodny</a>
               <br>
