open cv in a new tap

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
               <p style="text-align:center">
                 <a href="mailto:fadi.e.khateeb@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/FadiKhatib_CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/FadiKhatib_CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
 <!--                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp-->
 <!--                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
                 <a href="https://twitter.com/FadiKhatib1311">Twitter</a> &nbsp/&nbsp
