--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ data.</p>
           </tr>
 
         </tbody></table>
-
+          <hr class="soft">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
@@ -157,7 +157,7 @@ data.</p>
 
         </tbody></table>
 
-        <hr>
+        <hr class="soft">
 <!--        teaching-->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
