--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                 <a href="data/FadiKhatib_CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
 <!--                <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp-->
 <!--                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp-->
-                <a href="https://twitter.com/FadiKhatib1311">Twitter</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/fadi-khateeb/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://github.com/FadiKhateeb">Github</a>
+                <a href="https://twitter.com/FadiKhatib1311" target="_blank">Twitter</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/fadi-khateeb/" target="_blank">LinkedIn</a>
+<!--                  &nbsp/&nbsp-->
+<!--                <a href="https://github.com/FadiKhateeb" target="_blank">Github</a>-->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
