Update the publications

--- a/index.html
+++ b/index.html
@@ -75,32 +75,59 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <script type="text/javascript">
+					var bibtex_grelpose = "@misc{khatib2024leveraging,\n title={Leveraging Image Matching Toward End-to-End Relative Camera Pose Regression},\n author={Fadi Khatib and Yuval Margalit and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2211.14950},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"
+              </script>
+            <td width="75%" valign="middle">
+              <a href="https://robust-equivariant-sfm.github.io/">
+                <papertitle>RESFM: Robust Equivariant Multiview Structure from Motion</papertitle>
+              </a>
+              <br>
+              <strong>Fadi Khatib</strong>, <a href="https://ykasten.github.io/">Yoni Kasten</a>, Dror Moran, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
+              <br>
+              <em>Preprint</em>, 2024
+              <br>
+              <div class="btn-group">
+				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
+				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
+				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a> /
+              </div>
+              <p>We propose a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
+              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
+data.</p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
             </td>
             <script type="text/javascript">
-					var bibtex_grelpose = "@article{khatib2022grelpose,\n title={GRelPose: Generalizable End-to-End Relative Camera Pose Regression},\n author={Khatib, Fadi and Margalit, Yuval and Galun, Meirav and Basri, Ronen},\n journal={arXiv preprint arXiv:2211.14950},\n year={2022}\n}"
+					var bibtex_grelpose = "@misc{khatib2024leveraging,\n title={Leveraging Image Matching Toward End-to-End Relative Camera Pose Regression},\n author={Fadi Khatib and Yuval Margalit and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2211.14950},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"
               </script>
             <td width="75%" valign="middle">
-              <a href="https://fadikhateeb.github.io/GRelPose/">
-                <papertitle>GRelPose: Generalizable End-to-End Relative Camera Pose Regression</papertitle>
+              <a href="https://fadikhatib.github.io/GRelPose/">
+                <papertitle>Leveraging Image Matching Toward End-to-End Relative Camera Pose Regression</papertitle>
               </a>
               <br>
               <strong>Fadi Khatib*</strong>, <a href="https://www.linkedin.com/in/yuval-margalit-9688431b7/">Yuval Margalit*</a>, <a href="https://www.weizmann.ac.il/math/meirav/">Meirav Galun</a>, <a href="https://www.weizmann.ac.il/math/ronen/home">Ronen Basri</a>
               <br>
-              <em>Preprint</em>, 2022
+              <em>CVPR Workshop</em>, 2024
               <br>
               <div class="btn-group">
 				<button onclick=copyToClipboard(bibtex_grelpose)>BibTeX</button> /
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
-				<a href="https://fadikhateeb.github.io/GRelPose/">Project Page </a> /
+				<a href="https://fadikhatib.github.io/GRelPose/">Project Page </a> /
               </div>
-              <p>We proposes a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
-              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
-data.</p>
+              <p>We propose to leverages Image Matching (IM) as a pre-trained task for relative pose regression. Specifically, we use LoFTR, an architecture that utilizes an attention-based network pre-trained on Scannet, to extract semi-dense feature maps, which are then warped and fed into a pose regression network.</p>
             </td>
           </tr>
+
+
 
         </tbody></table>
           <hr class="soft">
@@ -188,7 +215,6 @@ data.</p>
         <!--        Volunteer Experience-->
          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-		    <!-- 
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Volunteer Experience</heading>
               <ul>
@@ -202,7 +228,6 @@ data.</p>
 
               </ul>
             </td>
-		     --> 
           </tr>
         </tbody></table>
 
