Update the website

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                   I received my B.Sc in Computer Science at the age of 18 from the University of Haifa through the <a href="https://cs.hevra.haifa.ac.il/index.php/information-for-registrants-he/challenge-program">Challenge program</a>, which is designed for exceptional high school students.
               </p>
                 <p>
-                    My research interests lie at the intersection of computer vision, computer graphics, and machine learning. Through my research, I want to make it easier for computers and machines to understand and capture the dynamic 3D world we live in from images and videos.
+                    My main research interest lies in developing deep learning methods for 3D reconstruction and structure-from-motion tasks.
+<!--                    My research interests lie at the intersection of computer vision, computer graphics, and machine learning. Through my research, I want to make it easier for computers and machines to understand and capture the dynamic 3D world we live in from images and videos.-->
                 </p>
 
 
@@ -77,7 +78,7 @@
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/GrelPose.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/RESFM_gif.gif" alt="clean-usnob" width="160" height="160">
             </td>
             <script type="text/javascript">
 					var bibtex_grelpose = "@misc{khatib2024leveraging,\n title={Leveraging Image Matching Toward End-to-End Relative Camera Pose Regression},\n author={Fadi Khatib and Yuval Margalit and Meirav Galun and Ronen Basri},\n year={2024},\n eprint={2211.14950},\n archivePrefix={arXiv},\n primaryClass={cs.CV}\n }"
@@ -96,9 +97,12 @@
 				<a href="https://arxiv.org/abs/2211.14950">ArXiv</a> /
 				<a href="https://robust-equivariant-sfm.github.io/">Project Page </a> /
               </div>
-              <p>We propose a generalizable, end-to-end deep learning-based method for relative pose regression between two images, by utilizing
-              coarse features from the pre-trained local feature matching architecture - LoFTR. Our method works exceptionally well with limited training
-data.</p>
+              <p>We present a robust solver based on permutation equivariant architecture for the
+structure from motion problem. Our proposed method can cope with a point
+track tensor contaminated with many outliers. In addition, we modified the
+bundle adjustment module to make it robust enough to handle classification
+errors. Our method achieves high accuracy while reducing the time significantly
+compared to classical methods.</p>
             </td>
           </tr>
 
@@ -201,10 +205,10 @@ data.</p>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/WIS_logo.JPG" alt="clean-usnob" width="160" height="160">
+              <img src="images/logos/WIS_logo1.svg" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="center">
-              <a href="https://erez.weizmann.ac.il/pls/htmldb/f?p=186/30/16031729465298//NO//pid_/_pprev/14534_/_13968">Multiple View Geometry for Computer Vision Applications</a> , Spring 2023 [<a href="https://www.youtube.com/playlist?list=PLEB45naDUsF2vpvdxZ72Jjl8ZEKISv4Nh">Youtube</a>]
+              Introduction to computer vision course</a> , Winter 2024
             </td>
 
             </td>
@@ -218,13 +222,13 @@ data.</p>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Volunteer Experience</heading>
               <ul>
-                  <li> <b> Founder of the "Weizmann Arab Students and Researchers Association" </b>
-                <ul>
-                  <li> Organizing outreach programs, panels, mentoring programs, social activities and many others.</li>
-                  <li> Supported by the diversity and inclusion office at the Weizmann Institute.</li>
-                </ul>
+                <li> <b>Initiating various initiatives for the Arab students at the Weizmann Institute of Science:</b>
+                  <ul>
+                    <li>Organizing outreach programs, panels, mentoring sessions, social activities, and many others.</li>
+                    <li>Supported by the Diversity and Inclusion Office at the Weizmann Institute.</li>
+                  </ul>
                 </li>
-                <li> Volunteering in various programs that support and encourage students from underrepresented groups in academia.</li>
+
 
               </ul>
             </td>
@@ -238,6 +242,9 @@ data.</p>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Awards</heading>
               <ul>
+                  <li> The Cornell, Maryland, Max Planck Pre-doctoral Research School, 2023.</li>
+                  <li> Yoel Meches Memorial Fellowship for excellent students, Weizmann Institute of Science, 2023</li>
+              <li> The Feinberg Graduate School Diversity Appreciation Certificate for Advancing Equality, Diversity, and Inclusion, Weizmann Institute of Science, 2023.</li>
               <li> Moshe Horovitz memorial fellowship for excellent students, Weizmann Institute of Science, 2022.</li>
               <li> Summa Cum Laude (B.Sc Computer Science), University of Haifa, 2022.</li>
               <li> The Israeli Council for Higher Education Scholarship for outstanding master students, 2021-2023.</li>
